create report api
